<resources>
    <string name="app_name">PennApps</string>
    <string name="survey">Select your preferences: </string>
    <string name="american">American</string>
    <string name="indian">Indian</string>
    <string name="japanese">Japanese</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="italian">Italian</string>
    <string name="chinese">Chinese</string>
    <string name="korean">Korean</string>
    <string name="mexican">Mexican</string>
    <string name="thai">Thai</string>
    <string name="ethiopian">Ethiopian</string>

    <string name="title_activity_go">Go</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="pref_previously_started"></string>
</resources>
